--- a/integration_tests/build.gradle
+++ b/integration_tests/build.gradle
@@ -19,6 +19,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
+    compile 'org.freemarker:freemarker:2.3.30'
+
     /* retrofit */
     compile 'com.squareup.retrofit2:retrofit:2.4.0'
     compile 'com.squareup.retrofit2:converter-moshi:2.4.0'
