=> Confirmed auto generated vmLogTests are passing
=> Confirmed auto generated vmRandomTests are passing 

=> Added the auto generated VMTests and implemented the SELFDESTRUCT instruction 

=> Confirmed the auto generated vmPerformanceTests are passing 

=> Handled large storage addresses whilst verifying the storage data in the generated tests 

=> Fixed some regression issues introduced to memory 

=> Removed duplicate tests

=> Continued using the VMTests to fix issues in the solution 

=> Fixed a bug with the memory size

=> Fixed a bug regarding the memory size calculation in gasometer, harderned the memory to handle erroneous values (issues raised by vmtests)

=> Fixed a bug where SSTORE was not able to overwrite values

=> Added External as a dependency to AccountState

=> Continued implementing the gasometer unit tests and fixing any failures

--- a/integration_tests/src/main/resources/vm.tests.cpp.template
+++ b/integration_tests/src/main/resources/vm.tests.cpp.template
@@ -46,10 +46,19 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
   };
 
   ExternalMock ext {};
+  <#if test.fixture.pre.accountState.storage?has_content>
+  <#list test.fixture.pre.accountState.storage?keys as key>
+  ext.storageResponder.push_back(std::make_pair(
+    uint256_t(${key}),
+    Hex::hexToBytes("${test.fixture.pre.accountState.storage[key]}")
+  ));
+  </#list>
+  </#if>
+
   VM vm {};
   Call call(0);
   account_store_t* accountItems = new account_store_t();
-  AccountState accountState(accountItems);
+  AccountState accountState(accountItems, &ext);
   Gasometer gasometer(params.gas);
   bytes_t* memoryBytes = new bytes_t();
   Memory mem(memoryBytes);
@@ -63,7 +72,15 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
   <#if test.fixture.post??>
   <#list test.fixture.post.accountState.storage?keys as key>
   CHECK("${test.fixture.post.accountState.storage[key]}" ==
+    <#if key?length <= 8>
     Utils::uint256_2str(accountState.get(${key}))
+    <#else>
+    Utils::uint256_2str(
+      accountState.get(
+        BigInt::fromBytes(Hex::hexToBytes("${key[2..]}"))
+      )
+    )
+    </#if>
   );
   </#list>
   </#if>
