=> Confirmed that all the VM tests are passing
=> Updated memory to use uint64_t rather than size_t 

=> Fixed a bug in memory, where it was possible to read a slice out of bounds 

=> Fixed the misspelt reference to ext in eos_execute 

=> Fixed a bug where the ret and arg of the DUP9+ instructions were using base10 rather than hex 

=> Fixed a bug where the ret and arg of the SWAP9+ instructions were using base10 rather than hex

--- a/integration_tests/src/main/resources/vm.tests.cpp.template
+++ b/integration_tests/src/main/resources/vm.tests.cpp.template
@@ -77,7 +77,7 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
     <#else>
     Utils::uint256_2str(
       accountState.get(
-        BigInt::fromBytes(Hex::hexToBytes("${key[2..]}"))
+        BigInt::fromBigEndianBytes(Hex::hexToBytes("${key[2..]}"))
       )
     )
     </#if>
