=> Implemented the ability to return a TRACE from the VM that will surface into the smart contract
=> Refactored the VM to include the gasometer and params as instance variables, rather than passing them in as arguments 

=> Changed the gasometer args parameter to be passed be reference 

=> Passed the stack args into gasometer, rather than the entire StackMachine 

=> Refactoring gasometer to use primarily the gas_t type for performance 

=> Refactored the VM to create a local instance of the StackMachine, rather than passing it in by reference 

=> Stopped passing in the StackMachine into AccountStore, and introduced a put method to account store 

=> Removed the returnData, it can be reintroduced if there is a neeed

=> Added ccpcheck, and made the suggestions it recommended 

=> Removed the unused last_stack_ret_len variable 

=> Updated the generated integration tests to include the missing "0x" on signed transaction

=> Added an out of gas message call result

--- a/integration_tests/src/main/resources/vm.tests.cpp.template
+++ b/integration_tests/src/main/resources/vm.tests.cpp.template
@@ -56,7 +56,7 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
   </#list>
   </#if>
 
-  VM vm {};
+  VM vm(params);
   Call call(0);
   AccountState accountState(&ext);
   Gasometer gasometer(params.gas);
@@ -64,7 +64,7 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
   StackMachine sm {};
 
   // when
-  vm.execute(mem, sm, accountState, gasometer, params, ext, call, env);
+  vm.execute(mem, accountState, ext, call, env);
 
   // then
   <#if test.fixture.post??>
