=> Refactored the solution to allocate large objects on the heap.
=> Merged env / params into a Context structure 

=> Assigned the result of RLP decode to a shared pointer, which is used to build the new Context for the VM.

=> Temporarily removed the generated Kotlin integration tests, they will be introduced when a reasonable pass rate is achieved.

--- a/integration_tests/src/main/resources/vm.tests.kotlin.template
+++ b/integration_tests/src/main/resources/vm.tests.kotlin.template
@@ -65,7 +65,7 @@ class ${groupName} {
         // then
         val response = rawAction.pushTransaction(
             newAccountName,
-            "0x$signedTransaction",
+            signedTransaction,
             AccountIdentifier.create(newAccountName, newEthAccount.address).toHex(),
             TransactionContext(
                 newAccountName,
