--- a/integration_tests/src/main/resources/vm.tests.cpp.template
+++ b/integration_tests/src/main/resources/vm.tests.cpp.template
@@ -4,6 +4,7 @@
 // https://github.com/ethereum/tests/blob/develop/VMTests/
 //
 #include "catch.hpp"
+#include <memory>
 #include <evm/utils.h>
 #include <evm/vm.h>
 #include <evm/hex.h>
@@ -46,35 +47,57 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
     data_bytes /* data */
   };
 
-  ExternalMock ext {};
+  std::shared_ptr<Context> context = std::make_shared<Context>(
+    env.chainId,
+    env.blockNumber,
+    env.timestamp,
+    env.gasLimit,
+    env.coinbase,
+    env.difficulty,
+    env.blockHash,
+    params.address,
+    params.codeHash,
+    params.codeVersion,
+    params.address,
+    params.sender,
+    params.origin,
+    params.gas,
+    params.gasPrice,
+    params.value,
+    std::make_shared<bytes_t>(params.code),
+    std::make_shared<bytes_t>(params.data)
+  );
+
+  std::shared_ptr<ExternalMock> external = std::make_shared<ExternalMock>();
   <#if test.fixture.pre.accountState.storage?has_content>
   <#list test.fixture.pre.accountState.storage?keys as key>
-  ext.storageResponder.push_back(std::make_pair(
+  external->storageResponder.push_back(std::make_pair(
     uint256_t(${key}),
     Hex::hexToBytes("${test.fixture.pre.accountState.storage[key]}")
   ));
   </#list>
   </#if>
 
-  VM vm(params);
-  Call call(0);
-  AccountState accountState(&ext);
+  std::shared_ptr<std::vector<uint256_t>> stackItems = std::make_shared<std::vector<uint256_t>>();
+  std::shared_ptr<StackMachine> stack = std::make_shared<StackMachine>(stackItems);
+  VM vm(context, stack);
+  std::shared_ptr<Call> call = std::make_shared<Call>(0);
+  std::shared_ptr<AccountState> accountState = std::make_shared<AccountState>(external);
   Gasometer gasometer(params.gas);
-  Memory mem {};
-  StackMachine sm {};
+  std::shared_ptr<Memory> mem = std::make_shared<Memory>();
 
   // when
-  vm.execute(mem, accountState, ext, call, env);
+  vm.execute(mem, accountState, external, call);
 
   // then
   <#if test.fixture.post??>
   <#list test.fixture.post.accountState.storage?keys as key>
   CHECK("${test.fixture.post.accountState.storage[key]}" ==
     <#if key?length <= 8>
-    Utils::uint256_2str(accountState.get(${key}))
+    Utils::uint256_2str(accountState->get(${key}))
     <#else>
     Utils::uint256_2str(
-      accountState.get(
+      accountState->get(
         BigInt::fromHex("${key[2..]}")
       )
     )
