=> Expanded the env README
=> Regenerated the vmTest

=> Wrote some scripts to deploy a new evm contract to a running docker environment

=> Removed the peekMany and topPair methods from stack since they were both only used in a single operation

=> Added uuid generator to the Docker image so that random wallet names can be created

=> Used the keccak hash of the codeAddress and the key as the eos storage key

=> Added a sleep to the create test to stop the duplicate transaction check on the local node

=> Added a publish script for building the smart contract and deploying in one command

=> Refactored the solution to return a shared_ptr from memory->readSlice

=> Refactored the solution to pass the account store vector as a shared pointer argument, rather than constructing it locally within account_state

=> Refactored the solution to pass in the vector of bytes to memory as a shared pointer, rather than allocating it locally

=> Fixed a memory out of bounds exception by changing the memory readSlice method to accept the uint256 args by reference

=> Added pragma once to hash.h

=> Refactored the account store cache to include the codeAddress, this extra argument is used to create a keccak256 hash of (codeAddress, key) to ensure uniqueness in the account_state table

=> Added accountIdentifier and a primary key to the account_state table

=> Started to add codeAddress to storageAt

=> Passed context through the gasometer so that codeAddress can be accessed for storageAt, and the gas cost calculation of SSTORE

--- a/env/eosio_2.0.4/Dockerfile
+++ b/env/eosio_2.0.4/Dockerfile
@@ -4,6 +4,7 @@ RUN apt-get update -y
 RUN apt-get install wget -y
 RUN apt-get install curl -y
 RUN apt-get install git -y
+RUN apt-get install uuid-runtime -y
 
 RUN wget https://github.com/eosio/eos/releases/download/v2.0.4/eosio_2.0.4-1-ubuntu-18.04_amd64.deb
 RUN apt-get install ./eosio_2.0.4-1-ubuntu-18.04_amd64.deb -y
