--- a/integration_tests/src/main/resources/vm.tests.cpp.template
+++ b/integration_tests/src/main/resources/vm.tests.cpp.template
@@ -82,9 +82,11 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
   std::shared_ptr<StackMachine> stack = std::make_shared<StackMachine>(stackItems);
   VM vm(context, stack);
   std::shared_ptr<Call> call = std::make_shared<Call>(0);
-  std::shared_ptr<AccountState> accountState = std::make_shared<AccountState>(external);
+  std::shared_ptr<account_store_t> cacheItems = std::make_shared<account_store_t>();
+  std::shared_ptr<AccountState> accountState = std::make_shared<AccountState>(external, cacheItems);
   Gasometer gasometer(params.gas);
-  std::shared_ptr<Memory> mem = std::make_shared<Memory>();
+  std::shared_ptr<bytes_t> memoryBytes = std::make_shared<bytes_t>();
+  std::shared_ptr<Memory> mem = std::make_shared<Memory>(memoryBytes);
 
   // when
   vm.execute(mem, accountState, external, call);
@@ -94,11 +96,12 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
   <#list test.fixture.post.accountState.storage?keys as key>
   CHECK("${test.fixture.post.accountState.storage[key]}" ==
     <#if key?length <= 8>
-    Utils::uint256_2str(accountState->get(${key}))
+    Utils::uint256_2str(accountState->get(uint256_t(${key}), context->codeAddress))
     <#else>
     Utils::uint256_2str(
       accountState->get(
-        BigInt::fromHex("${key[2..]}")
+        BigInt::fromHex("${key[2..]}"),
+        context->codeAddress
       )
     )
     </#if>
