--- a/integration_tests/src/main/resources/vm.tests.cpp.template
+++ b/integration_tests/src/main/resources/vm.tests.cpp.template
@@ -13,6 +13,7 @@
 #include <evm/gasometer.h>
 #include <evm/big_int.h>
 #include "external_mock.h"
+#include <evm/operation.h>
 
 <#list tests as test>
 TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
@@ -87,9 +88,10 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
   Gasometer gasometer(params.gas);
   std::shared_ptr<bytes_t> memoryBytes = std::make_shared<bytes_t>();
   std::shared_ptr<Memory> mem = std::make_shared<Memory>(memoryBytes);
+  Operation operation = Operation();
 
   // when
-  vm.execute(mem, accountState, external, call);
+  vm.execute(operation, mem, accountState, external, call);
 
   // then
   <#if test.fixture.post??>
