=> Implemented emplace for account code, currently only supporting a single parent contract
=> Fixed a bug where the checksum256 was being padded in the wrong direction for the address argument 

=> Wrote a big int test that ensures toFixed32 pads from the front 

=> Refactored eos_external to use hpp 

=> Refactored external_mock to use app

=> The code lookup is now coupled with the actual emplace call, as such an EmplaceResult enum has been introduced to handle the various types of failures that can occur 

=> Implemented an error message for when a code entry already exists, and confirmed this functionality with an acceptance test 

=> Updated account to start the nonce from 0

=> Added an acceptance test for creating a contract via the CODECOPY / value zero method 

=> Introduced the MESSAGE_CALL_APPLY_CREATE call result to handle creating a contract from CODECOPY 

=> Added an acceptance test to confirm that only one contract can be created via the CODECOPY method 

=> Started adding an acceptance for testing message calls, it will also indirectly test the creation of child contracts

--- a/integration_tests/src/main/resources/vm.tests.cpp.template
+++ b/integration_tests/src/main/resources/vm.tests.cpp.template
@@ -12,7 +12,7 @@
 #include <evm/call.h>
 #include <evm/gasometer.hpp>
 #include <evm/big_int.hpp>
-#include "external_mock.h"
+#include "external_mock.hpp"
 #include <evm/operation.h>
 
 <#list tests as test>
@@ -56,17 +56,17 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
     env.coinbase,
     env.difficulty,
     env.blockHash,
-    uint256_t(0xea0e9a), /* address */
-    uint256_t(0xf9313a), /* codeHash */
-    uint256_t(0x193821), /* codeVersion */
-    uint256_t(0xea0e9a), /* address */
-    BigInt::fromHex("cd1722f3947def4cf144679da39c4c32bdc35681"),
-    uint256_t(0x1283fe), /* origin */
-    100000,
-    uint256_t(0),
-    uint256_t(0),
-    std::make_shared<bytes_t>(codeBytes),
-    std::make_shared<bytes_t>()
+    params.address,
+    params.codeHash,
+    params.codeVersion,
+    params.address,
+    params.sender,
+    params.origin,
+    params.gas,
+    params.gasPrice,
+    params.value,
+    std::make_shared<bytes_t>(params.code),
+    std::make_shared<bytes_t>(params.data)
   );
 
   std::shared_ptr<ExternalMock> external = std::make_shared<ExternalMock>();
