=> Added a starting balance to EVM accounts
=> Finished adding an acceptance test that verifies the smart contract can respond to token transfers 

=> Added an acceptance test to confirm that the account must be linked to an ethereum account to make a token transfer 

=> Added a test to verify that tokens are sent back to the desired account after a withdraw action 

=> Added an acceptance test for ensuring a non/greater than zero value is provided for withdraw 

=> Added an acceptance test that confirms the eosio account provided to the withdraw action has an associated EVM account.

=> Added an acceptance test that confirms a balance check is performed during withdraw, to ensure the EVM account has a sufficient balance to perform the withdraw 

=> Added the --add-code permission to the eos.evm contract account during the node environment setup

=> Implemented the inline action for transferring tokens during withdrawal 

=> Updated to the latest version of eos-jvm 

=> Moved the contract constants into the actual contract class 

=> Added acceptance tests for testing the correct balance is returned by the BALANCE instruction 

=> Implemented the external balance retrieval 

=> Changed storageAt to return a uint256 word, rather than a bytes_t 

=> Implemented the SLOAD from the smart contract. and wrote an acceptance test to cover a save / load scenario 

=> Added a nonce value to account_code entries, it will be used as the nonce of the virtual address that owns the contract as far as the EVM is concerned 

=> Added a nonce test for ensuring that transaction nonces are in order 

=> Added a README note regarding nonces 

=> Used a double in the external balance to fix a performance issue 

=> Removed the block info test, it is sufficient for this functionality to be covered by unit tests

--- a/integration_tests/src/main/resources/vm.tests.cpp.template
+++ b/integration_tests/src/main/resources/vm.tests.cpp.template
@@ -74,7 +74,7 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
   <#list test.fixture.pre.accountState.storage?keys as key>
   external->storageResponder.push_back(std::make_pair(
     uint256_t(${key}),
-    Hex::hexToBytes("${test.fixture.pre.accountState.storage[key]}")
+    BigInt::fromBigEndianBytes(Hex::hexToBytes("${test.fixture.pre.accountState.storage[key]}"))
   ));
   </#list>
   </#if>
