--- a/integration_tests/src/main/resources/vm.tests.cpp.template
+++ b/integration_tests/src/main/resources/vm.tests.cpp.template
@@ -4,11 +4,12 @@
 // https://github.com/ethereum/tests/blob/develop/VMTests/
 //
 #include "catch.hpp"
+#include "test_utils.hpp"
 #include <memory>
 #include <evm/utils.hpp>
 #include <evm/vm.h>
 #include <evm/hex.hpp>
-#include <evm/return_data.h>
+
 #include <evm/call.h>
 #include <evm/gasometer.hpp>
 #include <evm/big_int.hpp>
@@ -19,12 +20,12 @@
 TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
   env_t env = {
     uint256_t(1), /* chainId */
-    BigInt::fromHex("${test.fixture.env.currentNumber[2..]}"), /* blockNumber */
-    BigInt::fromHex("${test.fixture.env.currentTimestamp[2..]}"), /* timestamp */
-    BigInt::fromHex("${test.fixture.env.currentGasLimit[2..]}"), /* gasLimit */
-    BigInt::fromHex("${test.fixture.env.currentCoinbase[2..]}"), /* coinbase */
-    BigInt::fromHex("${test.fixture.env.currentDifficulty[2..]}"), /* difficulty */
-    BigInt::fromHex("${(test.fixture.env.previousHash[2..])!""}") /* blockHash */
+    TestUtils::fromHex("${test.fixture.env.currentNumber[2..]}"), /* blockNumber */
+    TestUtils::fromHex("${test.fixture.env.currentTimestamp[2..]}"), /* timestamp */
+    TestUtils::fromHex("${test.fixture.env.currentGasLimit[2..]}"), /* gasLimit */
+    TestUtils::fromHex("${test.fixture.env.currentCoinbase[2..]}"), /* coinbase */
+    TestUtils::fromHex("${test.fixture.env.currentDifficulty[2..]}"), /* difficulty */
+    TestUtils::fromHex("${(test.fixture.env.previousHash[2..])!""}") /* blockHash */
   };
 
   std::string bytecode_str = "${test.fixture.exec.code[2..]}";
@@ -35,15 +36,15 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
   </#if>
 
   params_t params = {
-    BigInt::fromHex("${test.fixture.exec.address[2..]}"), /* codeAddress*/
+    TestUtils::fromHex("${test.fixture.exec.address[2..]}"), /* codeAddress*/
     uint256_t(0xf9313a), /* codeHash */
     uint256_t(0x193821), /* codeVersion */
-    BigInt::fromHex("${test.fixture.exec.address[2..]}"), /* address */
-    BigInt::fromHex("${test.fixture.exec.caller[2..]}"), /* sender */
-    BigInt::fromHex("${test.fixture.exec.origin[2..]}"), /* origin */
+    TestUtils::fromHex("${test.fixture.exec.address[2..]}"), /* address */
+    TestUtils::fromHex("${test.fixture.exec.caller[2..]}"), /* sender */
+    TestUtils::fromHex("${test.fixture.exec.origin[2..]}"), /* origin */
     gas_t(${test.fixture.exec.gas}), /* gas */
-    BigInt::fromHex("${test.fixture.exec.gasPrice[2..]}"), /* gasPrice */
-    BigInt::fromHex("${test.fixture.exec.value[2..]}"), /* value */
+    TestUtils::fromHex("${test.fixture.exec.gasPrice[2..]}"), /* gasPrice */
+    TestUtils::fromHex("${test.fixture.exec.value[2..]}"), /* value */
     Hex::hexToBytes(bytecode_str), /* code */
     data_bytes /* data */
   };
@@ -93,7 +94,7 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
   Operation operation = Operation();
 
   // when
-  vm.execute(operation, context, mem, accountState, external, call);
+  vm.execute(operation, context, mem, accountState, external);
 
   // then
   <#if test.fixture.post??>
@@ -104,7 +105,7 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
     <#else>
     Utils::uint256_2str(
       accountState->get(external, 
-        BigInt::fromHex("${key[2..]}"),
+        TestUtils::fromHex("${key[2..]}"),
         context->codeAddress
       )
     )
