--- a/integration_tests/src/main/resources/vm.tests.cpp.template
+++ b/integration_tests/src/main/resources/vm.tests.cpp.template
@@ -10,32 +10,29 @@
 #include <evm/vm.h>
 #include <evm/hex.hpp>
 
-#include <evm/call.h>
+#include <evm/call.hpp>
 #include <evm/gasometer.hpp>
 #include <evm/big_int.hpp>
 #include "external_mock.hpp"
-#include <evm/operation.h>
+#include <evm/operation.hpp>
 
 <#list tests as test>
 TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
-  env_t env = {
-    uint256_t(1), /* chainId */
-    TestUtils::fromHex("${test.fixture.env.currentNumber[2..]}"), /* blockNumber */
-    TestUtils::fromHex("${test.fixture.env.currentTimestamp[2..]}"), /* timestamp */
-    TestUtils::fromHex("${test.fixture.env.currentGasLimit[2..]}"), /* gasLimit */
-    TestUtils::fromHex("${test.fixture.env.currentCoinbase[2..]}"), /* coinbase */
-    TestUtils::fromHex("${test.fixture.env.currentDifficulty[2..]}"), /* difficulty */
-    TestUtils::fromHex("${(test.fixture.env.previousHash[2..])!""}") /* blockHash */
-  };
-
-  std::string bytecode_str = "${test.fixture.exec.code[2..]}";
+  bytes_t code_bytes = Hex::hexToBytes("${test.fixture.exec.code[2..]}");
   <#if test.fixture.exec.data[2..]?has_content>
   bytes_t data_bytes = Hex::hexToBytes("${test.fixture.exec.data[2..]}");
   <#else>
   bytes_t data_bytes = bytes_t();
   </#if>
 
-  params_t params = {
+  std::shared_ptr<Context> context = std::make_shared<Context>(
+    uint256_t(1), /* chainId */
+    TestUtils::fromHex("${test.fixture.env.currentNumber[2..]}"), /* blockNumber */
+    TestUtils::fromHex("${test.fixture.env.currentTimestamp[2..]}"), /* timestamp */
+    TestUtils::fromHex("${test.fixture.env.currentGasLimit[2..]}"), /* gasLimit */
+    TestUtils::fromHex("${test.fixture.env.currentCoinbase[2..]}"), /* coinbase */
+    TestUtils::fromHex("${test.fixture.env.currentDifficulty[2..]}"), /* difficulty */
+    TestUtils::fromHex("${(test.fixture.env.previousHash[2..])!""}"), /* blockHash */
     TestUtils::fromHex("${test.fixture.exec.address[2..]}"), /* codeAddress*/
     uint256_t(0xf9313a), /* codeHash */
     uint256_t(0x193821), /* codeVersion */
@@ -45,29 +42,8 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
     gas_t(${test.fixture.exec.gas}), /* gas */
     TestUtils::fromHex("${test.fixture.exec.gasPrice[2..]}"), /* gasPrice */
     TestUtils::fromHex("${test.fixture.exec.value[2..]}"), /* value */
-    Hex::hexToBytes(bytecode_str), /* code */
-    data_bytes /* data */
-  };
-
-  std::shared_ptr<Context> context = std::make_shared<Context>(
-    env.chainId,
-    env.blockNumber,
-    env.timestamp,
-    env.gasLimit,
-    env.coinbase,
-    env.difficulty,
-    env.blockHash,
-    params.address,
-    params.codeHash,
-    params.codeVersion,
-    params.address,
-    params.sender,
-    params.origin,
-    params.gas,
-    params.gasPrice,
-    params.value,
-    std::make_shared<bytes_t>(params.code),
-    std::make_shared<bytes_t>(params.data)
+    std::make_shared<bytes_t>(code_bytes),
+    std::make_shared<bytes_t>(data_bytes)
   );
 
   std::shared_ptr<ExternalMock> external = std::make_shared<ExternalMock>();
@@ -84,29 +60,27 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
   std::shared_ptr<StackMachine> stack = std::make_shared<StackMachine>(stackItems);
   std::shared_ptr<Gasometer> gasometer = std::make_shared<Gasometer>(context->gas);
   VM vm(stack, gasometer);
-
-  std::shared_ptr<Call> call = std::make_shared<Call>(0);
-  std::shared_ptr<account_store_t> cacheItems = std::make_shared<account_store_t>();
-  std::shared_ptr<AccountState> accountState = std::make_shared<AccountState>(cacheItems);
+  std::shared_ptr<PendingState> pendingState = std::make_shared<PendingState>();
 
   std::shared_ptr<bytes_t> memoryBytes = std::make_shared<bytes_t>();
   std::shared_ptr<Memory> mem = std::make_shared<Memory>(memoryBytes);
   Operation operation = Operation();
 
   // when
-  vm.execute(operation, context, mem, accountState, external);
+  vm.execute(0, operation, context, mem, pendingState, external);
 
   // then
   <#if test.fixture.post??>
   <#list test.fixture.post.accountState.storage?keys as key>
   CHECK("${test.fixture.post.accountState.storage[key]}" ==
     <#if key?length <= 8>
-    Utils::uint256_2str(accountState->get(external, uint256_t(${key}), context->codeAddress))
+    Utils::uint256_2str(pendingState->getState(uint256_t(${key}), context->codeAddress, external))
     <#else>
     Utils::uint256_2str(
-      accountState->get(external, 
+      pendingState->getState(
         TestUtils::fromHex("${key[2..]}"),
-        context->codeAddress
+        context->codeAddress,
+        external
       )
     )
     </#if>
