=> Refactored fromBigEndianBytes and fromFixed32 to manually copy over the bytes, rather than use std::copy => Removed writeSlice from memory which is no longer used => Simplified the keccak256 to uint256_t implementation => Used the bytes pointer directly in the byte reader => Moved the calldataload code from BigInt into operation since it's only used in one place => Removed a redundant vector allocation from memory->read => Added a hashSlice method to memory, to avoid passing large vector arrays back and forth between Memory => return bytes_t from readSlice, and assign to a shared_ptr where it's needed, log now uses a reference to bytes rather than a shared_ptr => simplified MSTORE8 => Refactored returnData to use bytes_t rather than a shared pointer => Reserve 1024 items on the stack => Internalised the stack vector within StackMachine => Internalised the Memory bytes within memory => Added a unit rest for the ERC20 creation

--- a/integration_tests/src/main/resources/vm.tests.cpp.template
+++ b/integration_tests/src/main/resources/vm.tests.cpp.template
@@ -56,14 +56,12 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
   </#list>
   </#if>
 
-  std::shared_ptr<std::vector<uint256_t>> stackItems = std::make_shared<std::vector<uint256_t>>();
-  std::shared_ptr<StackMachine> stack = std::make_shared<StackMachine>(stackItems);
+  std::shared_ptr<StackMachine> stack = std::make_shared<StackMachine>();
   std::shared_ptr<Gasometer> gasometer = std::make_shared<Gasometer>(context->gas);
   VM vm(stack, gasometer);
   std::shared_ptr<PendingState> pendingState = std::make_shared<PendingState>();
 
-  std::shared_ptr<bytes_t> memoryBytes = std::make_shared<bytes_t>();
-  std::shared_ptr<Memory> mem = std::make_shared<Memory>(memoryBytes);
+  std::shared_ptr<Memory> mem = std::make_shared<Memory>();
   Operation operation = Operation();
 
   // when
