=> Added the contracts from ethereum_org as acceptance tests => Introduced the isStatic flag to context, and passed it through the call stack => Ensured that mutations can't occur during a call that has the isStatic flag set to true => Fixed a bug where memory copied into lower positions was increasing the overall size of the memory vector, rather than replacing the existing entries => Fixed a bug where a transfer to the parent context sender was not using the correct account table query => Introduced TransferType which is used to determine which transfer mechanism is used

--- a/integration_tests/src/main/resources/vm.tests.cpp.template
+++ b/integration_tests/src/main/resources/vm.tests.cpp.template
@@ -42,6 +42,7 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
     gas_t(${test.fixture.exec.gas}), /* gas */
     TestUtils::fromHex("${test.fixture.exec.gasPrice[2..]}"), /* gasPrice */
     TestUtils::fromHex("${test.fixture.exec.value[2..]}"), /* value */
+    false,
     std::make_shared<bytes_t>(code_bytes),
     std::make_shared<bytes_t>(data_bytes)
   );
