=> Started implementing the evm_repl project, which will be used as the interface to demo the functionality

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ clients/generate_tests/.gradle
 clients/generate_tests/.idea
 acceptance_tests/.gradle
 acceptance_tests/.idea
+clients/evm_repl/node_modules
