=> Implemented the ability to list the environment in the REPL => Implemented a REPL command for displaying the EVM account information for an eos account name => Implemented the unsigned transaction command	in the REPL => Implemented the getCode REPL command => Continued documenting the solution

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ clients/generate_tests/.idea
 acceptance_tests/.gradle
 acceptance_tests/.idea
 clients/evm_repl/node_modules
+tools/js/node_modules
