=> Refactored pending state to remove the dependency on external => Implemented pending changes for self destruct revert, and a vector to tracking contract creations that have been reverted => Implemented the ability to track contract creations, and the contracts that should be removed when a stack depth is reverted => Used a lambda to provide external storage to the pendingState to avoid a circular dependency => Added pending state to emplaceCode => Added an acceptance test for verifying that a contract is not created when the message call is reverted => Fixed a bug where RETURNDATACOPY was not popping items off the stack => Implemented the revertedContractCreation in the smart contract, any contracts that were marked for revert will be removed => Added an address type to the pending balance changes, so that the resolver knows which should be modified => Added the resolve balances method to the smart contract => Added an acceptance test for a basic Withdraw contract => Updated eos_external to use the new account balance resolver for incomingBalances => Added endowment to the new pending changes balances

--- a/clients/generate_tests/src/main/resources/vm.tests.cpp.template
+++ b/clients/generate_tests/src/main/resources/vm.tests.cpp.template
@@ -63,6 +63,7 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
 
   std::shared_ptr<Memory> mem = std::make_shared<Memory>();
   std::shared_ptr<Operation> operation = std::make_shared<Operation>();
+  std::shared_ptr<GasCalculation> gasCalculation = std::make_shared<GasCalculation>();
 
   // when
   vm.execute(0, context, mem, operation, gasCalculation, pendingState, external);
@@ -72,13 +73,21 @@ TEST_CASE("${test.name}______${test.fixture._info.sourceHash}", "[vm]") {
   <#list test.fixture.post.accountState.storage?keys as key>
   CHECK("${test.fixture.post.accountState.storage[key]}" ==
     <#if key?length <= 8>
-    Utils::uint256_2str(pendingState->getState(uint256_t(${key}), context->codeAddress, external))
+    Utils::uint256_2str(
+      pendingState->getState(
+        uint256_t(${key}),
+        context->codeAddress, [external, context] () {
+          return external->storageAt(uint256_t(${key}), context->codeAddress);
+        }
+      )
+    )
     <#else>
     Utils::uint256_2str(
       pendingState->getState(
         TestUtils::fromHex("${key[2..]}"),
-        context->codeAddress,
-        external
+        context->codeAddress, [external, context] () {
+          return external->storageAt(TestUtils::fromHex("${key[2..]}"), context->codeAddress);
+        }
       )
     )
     </#if>
