--- a/tools/package.json
+++ b/tools/package.json
@@ -8,6 +8,7 @@
     "crypto-js": "^4.0.0",
     "elliptic": "^6.5.2",
     "ethereum-tx-decoder": "^3.0.0",
+    "ethereumjs-tx": "^2.1.2",
     "rlp": "^2.2.4",
     "web3": "^1.2.6"
   }
